--- a/login/index.html
+++ b/login/index.html
@@ -13,9 +13,14 @@
       </div>
 
       <div class="login">
+
+         <img src="" alt="logo senai-gpt">
         <h1 class="titulo">Login</h1>
 
+        <input class="inpt" type="Email:" placeholder="insira o seu Email">
+         <input class="inpt" type="Senha:" placeholder="insira a sua Senha">
 
+         <button class="botao">entre</button>
       </div>
    </main>
  </body>
