pagina de login finalizada

--- a/login/index.html
+++ b/login/index.html
@@ -9,12 +9,12 @@
  <body>
   <main class="page-container">
      <div class=" robo-image">
-         <img src="" alt="logo senai-gpt">
+         <!-- <img src="asset/img/Rectangle 1.png" alt="logo senai-gpt"> -->
       </div>
 
       <div class="login">
 
-         <img src="" alt="logo senai-gpt">
+         <img src="asset/img/Chat.png" alt="logo senai-gpt">
         <h1 class="titulo">Login</h1>
 
         <input class="inpt" type="Email:" placeholder="insira o seu Email">
