--- a/chat/index.html
+++ b/chat/index.html
@@ -81,8 +81,10 @@
             </div>
         </div>
                 <div class="pesquisa">
+                    <input type="text" name="input" placeholder="">
+                    <label for="input">pesquisa</label>
+
                     
-                    <input type="text">
                 
                 </div>
         </main>
