--- a/chat/index.html
+++ b/chat/index.html
@@ -81,10 +81,10 @@
             </div>
         </div>
                 <div class="pesquisa">
-                    <input type="text" name="input" placeholder="">
-                    <label for="input">pesquisa</label>
-
-                    
+                     <i class=" fa-solid  fa-microphone"></i>         
+                     <i class=" fa-solid fa-img"></i>
+                    <input type="text" name="input" placeholder=" message">
+<i class="fa-solid fa-paper-plane"></i>                   
                 
                 </div>
         </main>
