--- a/javascripit/index.html
+++ b/javascripit/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascripit</title> <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="./condicionais.js"></script>
-    scrip
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- <script src="./condicionais.js"></script> -->
+     <script src = "repeticoes.js"></script>
+    
 </head>
 <body>
     
