Central de Exercicios

--- a/javascripit/index.html
+++ b/javascripit/index.html
@@ -3,13 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>javascripit</title> <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <title>central de exercicios-js</title>
+    <link rel="stylesheet" href="style.css">
     <!-- <script src="./condicionais.js"></script> -->
-     <script src = "repeticoes.js"></script>
+     <!-- <script src = "repeticoes.js"></script> -->
+      <script src="./central.js"></script>
     
 </head>
 <body>
-    
+    <h1>Central de Exercicios</h1>
+
+    <h2>logs</h2>
+    <div class="logs"></div>
+    <h2>Exercícios de Condicionais</h2>
+
+    <h3>Exercicio 01</h3>
+
+<p>verificacao de marioridade</p>
+
+<button onclick=" exercicio01 ()">executar</button>
+
+ <h3>Exercicio 02</h3>
+
+<p>verificacâo se o número é positivo ou negativo </p>
+
+<button onclick=" exercicio02 ()">executar</button>
+
+ <h3>Exercicio 03</h3>
+
+ 
+<p>Descubra se  Voce foi aprovado </p>
+
+<button onclick=" exercicio03 ()">executar</button>
+
+
+ <h3>Exercicio 04</h3>
+
+ 
+<p>Descubra se  número é positivo, negativo ou zero </p>
+
+<button onclick=" exercicio04 ()">executar</button>
+
+
+
+ <h3>Exercicio 05</h3>
+
+ 
+<p>clasificação de idade </p>
+
+<button onclick=" exercicio05 ()">executar</button>
+
+
+
+ <h3>Exercicio 06</h3>
+
+ 
+<p>Descubra se  número é par ou impar </p>
+
+<button onclick=" exercicio06 ()">executar</button>
+
+
+<h2>Nível Intermediário</h2>
+
+
+ <h3>Exercicio 01</h3>
+
+ 
+<p>Calculadora Simples  </p>
+
+<button onclick=" exercicio07 ()">executar</button>
+
+
+
+ <h3>Exercicio 02</h3>
+
+ 
+<p>Sistema de login simples  </p>
+
+<button onclick=" exercicio08()">executar</button>
+
+
+ <h3>Exercicio 03</h3>
+
+ 
+<p>Sistema de login simples  </p>
+
+<button onclick=" exercicio09()">executar</button>
+
+
+
+
+ <h3>Exercicio 09</h3>
+
+ 
+<p>Desconto em compras:  </p>
+
+<button onclick=" exercicio10()">executar</button>
+
+
+
+
+
 </body>
 </html>
