--- a/javascripit/index.html
+++ b/javascripit/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>central de exercicios-js</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <script src="uteis.js"></script> -->
     <!-- <script src="./condicionais.js"></script> -->
      <!-- <script src = "repeticoes.js"></script> -->
       <script src="./central.js"></script>
@@ -73,6 +74,7 @@
 
 <button onclick=" exercicio07 ()">executar</button>
 
+<!--  -->
 
 
  <h3>Exercicio 02</h3>
@@ -82,27 +84,40 @@
 
 <button onclick=" exercicio08()">executar</button>
 
+<!--  -->
 
  <h3>Exercicio 03</h3>
 
  
-<p>Sistema de login simples  </p>
+<p>Maior entre três números:  </p>
 
 <button onclick=" exercicio09()">executar</button>
 
 
 
 
- <h3>Exercicio 09</h3>
+ <h3>Exercicio 04</h3>
 
  
 <p>Desconto em compras:  </p>
 
 <button onclick=" exercicio10()">executar</button>
 
+<h1>Nivel  Avancado</h1>
 
 
+<h2>Funcões úteis</h2>
+<h3>Demonstração Filter</h3>
+<p>Números maiores que 2 </p>
+<button onclick="demoFilter()">executar</button>
+
+<h3>Demonstração  Find</h3>
+<p>Preco igual a 700</p>
+<button onclick=" demoFind()">executar</button>
 
 
+<h2>Demonstração Map</h2>
+<p>...</p>
+<button onclick="demomap()">executar</button>
 </body>
 </html>
